Wtf ? Workaround bug on safari - I dont know why

--- a/styles/Live.module.css
+++ b/styles/Live.module.css
@@ -87,7 +87,7 @@
 
 .chart-container {
   position: relative;
-  height: 100%;
+  height: 90%;
 }
 
 @media (max-width: 1200px) { 
